--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    font-family: ProximaNovaLight, -apple-system, "system-ui", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 #navbar{
     display: flex;
@@ -20,40 +21,59 @@ body{
 #navbar>div>span{
     color: whitesmoke;
 }
+
 #searchbar>div>img{
     width: 100%;
     height: 500px;
     position: absolute;
     background: rgba(0,0,0,0.8);
-  backdrop-filter: saturate(180%) blur(10px);
+   backdrop-filter: saturate(10%) blur(10px);
+   -webkit-filter: blur(5px);
+-moz-filter: blur(5px);
+-o-filter: blur(5px);
+-ms-filter: blur(5px);
+filter: blur(2px);
+  
 }
 
 #searchbar>div:last-child{
     position: absolute;
-    top: 30%;
+    top: 25%;
     color: rgb(255,255,255);
-    left: 30%; 
+    left: 20%;
+    font-family: ProximaNovaLight, -apple-system, "system-ui", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    
 }
+
 input{
     padding: 10px;
-    margin-left: -5px;
+    margin-left: 0px;
 }
 #inputbox{
     display: flex;
     background-color: whitesmoke;
-    width: 800px;
+    width: 100%;
     height: 60px;
     justify-content: center;
     align-items: center;
 }
 #guests{
     padding: 10px;
-    margin-left: -5px;
+    margin-left: 0px;
 }
 #searchbutton{
     padding: 10px;
-    margin-left: 0px;
     width: 150px;
     background-color: rgb(31,135,240);
     color: whitesmoke;
+}
+#location{
+    width: 250px;
+}
+#slider{
+    position: relative;
+    top: 75%;
+}
+#slides{
+    display: flex;
 }
