--- a/styles/login.css
+++ b/styles/login.css
@@ -12,6 +12,8 @@
     height: 370px;
     /* border: 2px solid grey; */
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    background-color: white;
+    display: none;
 
    
 
