--- a/styles/index.css
+++ b/styles/index.css
@@ -76,4 +76,35 @@ input{
 }
 #slides{
     display: flex;
+    gap: 50px;
+    width: 95%;
+    margin: auto;
+}
+#slides>div:first-child{
+    width: 5%;
+}
+#slides>div:last-child{
+    width: 5%;
+}
+#slides>div:nth-child(1){
+    width: 20%;
+}
+#slides>div:nth-child(2){
+    width: 20%;
+}
+#slides>div:nth-child(3){
+    width: 20%;
+}
+#slides>div:nth-child(4){
+    width: 20%;
+}
+#slides>div:nth-child(5){
+    width: 20%;
+}
+#slides>div>img{
+    height: 100px;
+    width: 200px;
+}
+#forward{
+    cursor: pointer;
 }
