--- a/styles/index.css
+++ b/styles/index.css
@@ -70,10 +70,7 @@ input{
 #location{
     width: 250px;
 }
-#slider{
-    /* position: absolute; */
-    top: 90%;
-}
+
 #slides{
     display: flex;
     gap: 50px;
@@ -86,19 +83,7 @@ input{
 #slides>div:last-child{
     width: 5%;
 }
-#slides>div:nth-child(1){
-    width: 20%;
-}
-#slides>div:nth-child(2){
-    width: 20%;
-}
-#slides>div:nth-child(3){
-    width: 20%;
-}
-#slides>div:nth-child(4){
-    width: 20%;
-}
-#slides>div:nth-child(5){
+.midc{
     width: 20%;
 }
 #slides>div>img{
@@ -180,18 +165,21 @@ filter: blur(2px);
 }
 .centerdiv{
     position: absolute;
+    cursor: pointer;
 }
 .place{
     position: relative;
     top: 10%;
     left: 30%;
     color: rgb(255,255,255);
+    cursor: pointer;
 }
 .city{
     position: relative;
     top: 7%;
     left: 30%;
     color: rgb(255,255,255);
+    cursor: pointer;
 }
 #investment{
     display: flex;
@@ -228,12 +216,14 @@ filter: blur(2px);
 #userdiv>div>img{
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
 #investment button{
    padding: 10px;
    background-color: rgb(28,135,239);
    color: rgb(250,253,254);
    border: none;
+   cursor: pointer;
 }
 #investment h3{
     color: rgb(107,107,107);
@@ -245,10 +235,100 @@ filter: blur(2px);
 #investdiv>div>img{
     width: 50px;
     height: 50px;
+    
 }
 #investdiv>div{
     text-align: center;
+    cursor: pointer;
 }
 #userdiv>div{
+    text-align: center;
+    cursor: pointer;
+}
+
+#bottomslider{
+    display: flex;
+    width: 100%;
+    margin: 50px;
+   
+    margin-left: 80px;
+}
+#bottomslider>div:first-child{
+ width: 2%;
+}
+#bottomslider>div:last-child{
+    width: 2%;
+}
+
+.bottomc{
+    width: 17%;
+}
+#bottomslider>div>div>img{
+    height: 150px;
+    width: 200px; 
+    background: rgba(0,0,0,0.8);
+ backdrop-filter: saturate(10%) blur(10px);
+ -webkit-filter: blur(5px);
+ -moz-filter: blur(5px);
+-o-filter: blur(5px);
+-ms-filter: blur(5px);
+filter: blur(2px);
+}
+.bottomimg{
+    position: absolute;
+
+}
+.bottomp{
+    position: relative;
+    top: 50%;
+ 
+    color: rgb(255,255,255);
+    text-align: center;
+}
+#h3{
+    color: rgb(107,107,107);
+    margin-left: 130px;
+    margin-bottom: -40px;
+}
+#bottoms{
+    width: 100%;
+    height: 200px;
+    margin-top: 40px;
+}
+#h3last{
+    margin-left: 100px;
+    color: rgb(107,107,107);
+}
+#lower{
+    display: flex;
+}
+#lower>div{
+    margin-left: 20px;
+    cursor: pointer;
+}
+#lower>div>p{
+    color: rgb(191,191,191);
+}
+#lower>div:first-child{
+    margin-left: 100px;
+}
+hr{
+    margin-top: -5px;
+    width: 90%;
+    margin: auto;
+    margin-top: -10px;
+}
+#container{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 10px;
+    margin-left: 50px;
+}
+#container>div>h4{
+    color: rgb(191,191,191);
+    text-align: center;
+}
+#container>div>p{
+    font-size: 10px;
     text-align: center;
 }
